--- a/Aquaponics/Aquaponics.csproj
+++ b/Aquaponics/Aquaponics.csproj
@@ -135,6 +135,18 @@
   <ItemGroup>
     <None Include="Resources\usb_m.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\kv.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\nel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\nel123.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
